--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   file_picker: ^6.0.0
+  typed_data: ^1.3.2
 
 dev_dependencies:
   flutter_test:
